# apuesta

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  package.json  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  seed_demo.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_import_rows.py  0003_sports_intelligence.py  0004_prediction_pipeline.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  seeds.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: mvp.py
backend/app/services/: backtesting.py  betalpha.py  correlation.py  odds.py  settlement.py  sports_intelligence.py  the_odds_api.py
backend/tests/: test_api_flow.py  test_betalpha.py  test_correlation_settlement.py  test_odds.py  test_the_odds_api_sync.py
docs/: ADR-0001-stack.md  ARCHITECTURE.md  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  ODDS_API_STRATEGY.md  OPEN_SOURCE_AUDIT.md  RISK_REGISTER.md
frontend/src/app/: dashboard-client.tsx  globals.css
frontend/src/lib/: api.ts
src/app/: dashboard-client.tsx  globals.css  layout.tsx
src/lib/: api.ts
supabase/: rls.sql
templates/: triunfobet_import_template.csv
