[project]
name = "betalpha-backend"
version = "0.1.0"
description = "FastAPI backend for BetAlpha Manager."
requires-python = ">=3.11,<3.15"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.7.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
